cabal-version: 3.0
name:          rerebase
version:       1.22
synopsis:
  Reexports from "base" with a bunch of other standard libraries

description:
  A rich drop-in replacement for \"base\".
  For details and docs please visit 
  <https://github.com/nikita-volkov/rerebase the project's GitHub page>.

homepage:      https://github.com/nikita-volkov/rerebase 
bug-reports:   https://github.com/nikita-volkov/rerebase/issues 
author:        Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:    Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:     (c) 2016, Nikita Volkov
license:       MIT
license-file:  LICENSE

source-repository head
  type:     git
  location: git://github.com/nikita-volkov/rerebase.git

library
  default-language: Haskell2010
  reexported-modules:
    Rebase.Control.Applicative as Control.Applicative,
    Rebase.Control.Applicative.Backwards as Control.Applicative.Backwards,
    Rebase.Control.Applicative.Lift as Control.Applicative.Lift,
    Rebase.Control.Arrow as Control.Arrow,
    Rebase.Control.Category as Control.Category,
    Rebase.Control.Comonad as Control.Comonad,
    Rebase.Control.Concurrent as Control.Concurrent,
    Rebase.Control.Concurrent.Chan as Control.Concurrent.Chan,
    Rebase.Control.Concurrent.MVar as Control.Concurrent.MVar,
    Rebase.Control.Concurrent.QSem as Control.Concurrent.QSem,
    Rebase.Control.Concurrent.QSemN as Control.Concurrent.QSemN,
    Rebase.Control.Concurrent.STM as Control.Concurrent.STM,
    Rebase.Control.Concurrent.STM.TArray as Control.Concurrent.STM.TArray,
    Rebase.Control.Concurrent.STM.TBQueue as Control.Concurrent.STM.TBQueue,
    Rebase.Control.Concurrent.STM.TChan as Control.Concurrent.STM.TChan,
    Rebase.Control.Concurrent.STM.TMVar as Control.Concurrent.STM.TMVar,
    Rebase.Control.Concurrent.STM.TQueue as Control.Concurrent.STM.TQueue,
    Rebase.Control.Concurrent.STM.TSem as Control.Concurrent.STM.TSem,
    Rebase.Control.Concurrent.STM.TVar as Control.Concurrent.STM.TVar,
    Rebase.Control.DeepSeq as Control.DeepSeq,
    Rebase.Control.Exception as Control.Exception,
    Rebase.Control.Exception.Base as Control.Exception.Base,
    Rebase.Control.Monad as Control.Monad,
    Rebase.Control.Monad.Cont as Control.Monad.Cont,
    Rebase.Control.Monad.Cont.Class as Control.Monad.Cont.Class,
    Rebase.Control.Monad.Error.Class as Control.Monad.Error.Class,
    Rebase.Control.Monad.Fail as Control.Monad.Fail,
    Rebase.Control.Monad.Fix as Control.Monad.Fix,
    Rebase.Control.Monad.Identity as Control.Monad.Identity,
    Rebase.Control.Monad.IO.Class as Control.Monad.IO.Class,
    Rebase.Control.Monad.Reader as Control.Monad.Reader,
    Rebase.Control.Monad.Reader.Class as Control.Monad.Reader.Class,
    Rebase.Control.Monad.RWS as Control.Monad.RWS,
    Rebase.Control.Monad.RWS.Class as Control.Monad.RWS.Class,
    Rebase.Control.Monad.RWS.Lazy as Control.Monad.RWS.Lazy,
    Rebase.Control.Monad.RWS.Strict as Control.Monad.RWS.Strict,
    Rebase.Control.Monad.Signatures as Control.Monad.Signatures,
    Rebase.Control.Monad.ST as Control.Monad.ST,
    Rebase.Control.Monad.ST.Lazy as Control.Monad.ST.Lazy,
    Rebase.Control.Monad.ST.Lazy.Unsafe as Control.Monad.ST.Lazy.Unsafe,
    Rebase.Control.Monad.ST.Strict as Control.Monad.ST.Strict,
    Rebase.Control.Monad.ST.Unsafe as Control.Monad.ST.Unsafe,
    Rebase.Control.Monad.State as Control.Monad.State,
    Rebase.Control.Monad.State.Class as Control.Monad.State.Class,
    Rebase.Control.Monad.State.Lazy as Control.Monad.State.Lazy,
    Rebase.Control.Monad.State.Strict as Control.Monad.State.Strict,
    Rebase.Control.Monad.STM as Control.Monad.STM,
    Rebase.Control.Monad.Trans as Control.Monad.Trans,
    Rebase.Control.Monad.Trans.Class as Control.Monad.Trans.Class,
    Rebase.Control.Monad.Trans.Cont as Control.Monad.Trans.Cont,
    Rebase.Control.Monad.Trans.Except as Control.Monad.Trans.Except,
    Rebase.Control.Monad.Trans.Identity as Control.Monad.Trans.Identity,
    Rebase.Control.Monad.Trans.Maybe as Control.Monad.Trans.Maybe,
    Rebase.Control.Monad.Trans.Reader as Control.Monad.Trans.Reader,
    Rebase.Control.Monad.Trans.RWS as Control.Monad.Trans.RWS,
    Rebase.Control.Monad.Trans.RWS.Lazy as Control.Monad.Trans.RWS.Lazy,
    Rebase.Control.Monad.Trans.RWS.Strict as Control.Monad.Trans.RWS.Strict,
    Rebase.Control.Monad.Trans.State as Control.Monad.Trans.State,
    Rebase.Control.Monad.Trans.State.Lazy as Control.Monad.Trans.State.Lazy,
    Rebase.Control.Monad.Trans.State.Strict as Control.Monad.Trans.State.Strict,
    Rebase.Control.Monad.Trans.Writer as Control.Monad.Trans.Writer,
    Rebase.Control.Monad.Trans.Writer.Lazy as Control.Monad.Trans.Writer.Lazy,
    Rebase.Control.Monad.Trans.Writer.Strict as Control.Monad.Trans.Writer.Strict,
    Rebase.Control.Monad.Writer as Control.Monad.Writer,
    Rebase.Control.Monad.Writer.Class as Control.Monad.Writer.Class,
    Rebase.Control.Monad.Writer.Lazy as Control.Monad.Writer.Lazy,
    Rebase.Control.Monad.Writer.Strict as Control.Monad.Writer.Strict,
    Rebase.Control.Monad.Zip as Control.Monad.Zip,
    Rebase.Control.Selective as Control.Selective,
    Rebase.Control.Selective.Free as Control.Selective.Free,
    Rebase.Control.Selective.Multi as Control.Selective.Multi,
    Rebase.Control.Selective.Rigid.Free as Control.Selective.Rigid.Free,
    Rebase.Control.Selective.Rigid.Freer as Control.Selective.Rigid.Freer,
    Rebase.Data.Biapplicative as Data.Biapplicative,
    Rebase.Data.Bifoldable as Data.Bifoldable,
    Rebase.Data.Bifunctor as Data.Bifunctor,
    Rebase.Data.Bifunctor.Apply as Data.Bifunctor.Apply,
    Rebase.Data.Bifunctor.Biff as Data.Bifunctor.Biff,
    Rebase.Data.Bifunctor.Clown as Data.Bifunctor.Clown,
    Rebase.Data.Bifunctor.Flip as Data.Bifunctor.Flip,
    Rebase.Data.Bifunctor.Join as Data.Bifunctor.Join,
    Rebase.Data.Bifunctor.Joker as Data.Bifunctor.Joker,
    Rebase.Data.Bifunctor.Product as Data.Bifunctor.Product,
    Rebase.Data.Bifunctor.Tannen as Data.Bifunctor.Tannen,
    Rebase.Data.Bifunctor.Wrapped as Data.Bifunctor.Wrapped,
    Rebase.Data.Bitraversable as Data.Bitraversable,
    Rebase.Data.Bits as Data.Bits,
    Rebase.Data.Bool as Data.Bool,
    Rebase.Data.ByteString as Data.ByteString,
    Rebase.Data.ByteString.Builder as Data.ByteString.Builder,
    Rebase.Data.ByteString.Builder.Extra as Data.ByteString.Builder.Extra,
    Rebase.Data.ByteString.Builder.Internal as Data.ByteString.Builder.Internal,
    Rebase.Data.ByteString.Builder.Prim as Data.ByteString.Builder.Prim,
    Rebase.Data.ByteString.Builder.Prim.Internal as Data.ByteString.Builder.Prim.Internal,
    Rebase.Data.ByteString.Builder.Scientific as Data.ByteString.Builder.Scientific,
    Rebase.Data.ByteString.Char8 as Data.ByteString.Char8,
    Rebase.Data.ByteString.Internal as Data.ByteString.Internal,
    Rebase.Data.ByteString.Lazy as Data.ByteString.Lazy,
    Rebase.Data.ByteString.Lazy.Char8 as Data.ByteString.Lazy.Char8,
    Rebase.Data.ByteString.Lazy.Internal as Data.ByteString.Lazy.Internal,
    Rebase.Data.ByteString.Short as Data.ByteString.Short,
    Rebase.Data.ByteString.Short.Internal as Data.ByteString.Short.Internal,
    Rebase.Data.ByteString.Unsafe as Data.ByteString.Unsafe,
    Rebase.Data.Char as Data.Char,
    Rebase.Data.Coerce as Data.Coerce,
    Rebase.Data.Complex as Data.Complex,
    Rebase.Data.Data as Data.Data,
    Rebase.Data.DList as Data.DList,
    Rebase.Data.Dynamic as Data.Dynamic,
    Rebase.Data.Either as Data.Either,
    Rebase.Data.Either.Combinators as Data.Either.Combinators,
    Rebase.Data.Either.Validation as Data.Either.Validation,
    Rebase.Data.Eq as Data.Eq,
    Rebase.Data.Fixed as Data.Fixed,
    Rebase.Data.Foldable as Data.Foldable,
    Rebase.Data.Function as Data.Function,
    Rebase.Data.Functor as Data.Functor,
    Rebase.Data.Functor.Alt as Data.Functor.Alt,
    Rebase.Data.Functor.Apply as Data.Functor.Apply,
    Rebase.Data.Functor.Bind as Data.Functor.Bind,
    Rebase.Data.Functor.Bind.Class as Data.Functor.Bind.Class,
    Rebase.Data.Functor.Bind.Trans as Data.Functor.Bind.Trans,
    Rebase.Data.Functor.Classes as Data.Functor.Classes,
    Rebase.Data.Functor.Compose as Data.Functor.Compose,
    Rebase.Data.Functor.Constant as Data.Functor.Constant,
    Rebase.Data.Functor.Contravariant as Data.Functor.Contravariant,
    Rebase.Data.Functor.Contravariant.Compose as Data.Functor.Contravariant.Compose,
    Rebase.Data.Functor.Contravariant.Divisible as Data.Functor.Contravariant.Divisible,
    Rebase.Data.Functor.Extend as Data.Functor.Extend,
    Rebase.Data.Functor.Identity as Data.Functor.Identity,
    Rebase.Data.Functor.Invariant as Data.Functor.Invariant,
    Rebase.Data.Functor.Invariant.TH as Data.Functor.Invariant.TH,
    Rebase.Data.Functor.Plus as Data.Functor.Plus,
    Rebase.Data.Functor.Product as Data.Functor.Product,
    Rebase.Data.Functor.Reverse as Data.Functor.Reverse,
    Rebase.Data.Functor.Sum as Data.Functor.Sum,
    Rebase.Data.Graph as Data.Graph,
    Rebase.Data.Group as Data.Group,
    Rebase.Data.Groupoid as Data.Groupoid,
    Rebase.Data.Hashable as Data.Hashable,
    Rebase.Data.HashMap.Lazy as Data.HashMap.Lazy,
    Rebase.Data.HashMap.Strict as Data.HashMap.Strict,
    Rebase.Data.HashSet as Data.HashSet,
    Rebase.Data.Int as Data.Int,
    Rebase.Data.IntMap as Data.IntMap,
    Rebase.Data.IntMap.Lazy as Data.IntMap.Lazy,
    Rebase.Data.IntMap.Strict as Data.IntMap.Strict,
    Rebase.Data.IntSet as Data.IntSet,
    Rebase.Data.IORef as Data.IORef,
    Rebase.Data.Isomorphism as Data.Isomorphism,
    Rebase.Data.Ix as Data.Ix,
    Rebase.Data.Kind as Data.Kind,
    Rebase.Data.List as Data.List,
    Rebase.Data.List.NonEmpty as Data.List.NonEmpty,
    Rebase.Data.Map as Data.Map,
    Rebase.Data.Map.Lazy as Data.Map.Lazy,
    Rebase.Data.Map.Strict as Data.Map.Strict,
    Rebase.Data.Maybe as Data.Maybe,
    Rebase.Data.Monoid as Data.Monoid,
    Rebase.Data.Ord as Data.Ord,
    Rebase.Data.Profunctor as Data.Profunctor,
    Rebase.Data.Profunctor.Adjunction as Data.Profunctor.Adjunction,
    Rebase.Data.Profunctor.Cayley as Data.Profunctor.Cayley,
    Rebase.Data.Profunctor.Choice as Data.Profunctor.Choice,
    Rebase.Data.Profunctor.Closed as Data.Profunctor.Closed,
    Rebase.Data.Profunctor.Composition as Data.Profunctor.Composition,
    Rebase.Data.Profunctor.Mapping as Data.Profunctor.Mapping,
    Rebase.Data.Profunctor.Monad as Data.Profunctor.Monad,
    Rebase.Data.Profunctor.Ran as Data.Profunctor.Ran,
    Rebase.Data.Profunctor.Rep as Data.Profunctor.Rep,
    Rebase.Data.Profunctor.Sieve as Data.Profunctor.Sieve,
    Rebase.Data.Profunctor.Strong as Data.Profunctor.Strong,
    Rebase.Data.Profunctor.Traversing as Data.Profunctor.Traversing,
    Rebase.Data.Profunctor.Types as Data.Profunctor.Types,
    Rebase.Data.Profunctor.Unsafe as Data.Profunctor.Unsafe,
    Rebase.Data.Profunctor.Yoneda as Data.Profunctor.Yoneda,
    Rebase.Data.Proxy as Data.Proxy,
    Rebase.Data.Ratio as Data.Ratio,
    Rebase.Data.Scientific as Data.Scientific,
    Rebase.Data.Semigroup as Data.Semigroup,
    Rebase.Data.Semigroup.Bifoldable as Data.Semigroup.Bifoldable,
    Rebase.Data.Semigroup.Bitraversable as Data.Semigroup.Bitraversable,
    Rebase.Data.Semigroup.Foldable as Data.Semigroup.Foldable,
    Rebase.Data.Semigroup.Traversable as Data.Semigroup.Traversable,
    Rebase.Data.Semigroup.Traversable.Class as Data.Semigroup.Traversable.Class,
    Rebase.Data.Semigroupoid as Data.Semigroupoid,
    Rebase.Data.Semigroupoid.Dual as Data.Semigroupoid.Dual,
    Rebase.Data.Semigroupoid.Ob as Data.Semigroupoid.Ob,
    Rebase.Data.Semigroupoid.Static as Data.Semigroupoid.Static,
    Rebase.Data.Sequence as Data.Sequence,
    Rebase.Data.Set as Data.Set,
    Rebase.Data.STRef as Data.STRef,
    Rebase.Data.STRef.Lazy as Data.STRef.Lazy,
    Rebase.Data.STRef.Strict as Data.STRef.Strict,
    Rebase.Data.String as Data.String,
    Rebase.Data.Text as Data.Text,
    Rebase.Data.Text.Array as Data.Text.Array,
    Rebase.Data.Text.Encoding as Data.Text.Encoding,
    Rebase.Data.Text.Encoding.Error as Data.Text.Encoding.Error,
    Rebase.Data.Text.Foreign as Data.Text.Foreign,
    Rebase.Data.Text.Internal as Data.Text.Internal,
    Rebase.Data.Text.IO as Data.Text.IO,
    Rebase.Data.Text.Lazy as Data.Text.Lazy,
    Rebase.Data.Text.Lazy.Builder as Data.Text.Lazy.Builder,
    Rebase.Data.Text.Lazy.Builder.Int as Data.Text.Lazy.Builder.Int,
    Rebase.Data.Text.Lazy.Builder.RealFloat as Data.Text.Lazy.Builder.RealFloat,
    Rebase.Data.Text.Lazy.Builder.Scientific as Data.Text.Lazy.Builder.Scientific,
    Rebase.Data.Text.Lazy.Encoding as Data.Text.Lazy.Encoding,
    Rebase.Data.Text.Lazy.IO as Data.Text.Lazy.IO,
    Rebase.Data.Text.Lazy.Read as Data.Text.Lazy.Read,
    Rebase.Data.Text.Read as Data.Text.Read,
    Rebase.Data.Text.Unsafe as Data.Text.Unsafe,
    Rebase.Data.Time as Data.Time,
    Rebase.Data.Time.Calendar as Data.Time.Calendar,
    Rebase.Data.Time.Calendar.Easter as Data.Time.Calendar.Easter,
    Rebase.Data.Time.Calendar.Julian as Data.Time.Calendar.Julian,
    Rebase.Data.Time.Calendar.MonthDay as Data.Time.Calendar.MonthDay,
    Rebase.Data.Time.Calendar.OrdinalDate as Data.Time.Calendar.OrdinalDate,
    Rebase.Data.Time.Calendar.WeekDate as Data.Time.Calendar.WeekDate,
    Rebase.Data.Time.Clock as Data.Time.Clock,
    Rebase.Data.Time.Clock.POSIX as Data.Time.Clock.POSIX,
    Rebase.Data.Time.Clock.TAI as Data.Time.Clock.TAI,
    Rebase.Data.Time.Compat as Data.Time.Compat,
    Rebase.Data.Time.Format as Data.Time.Format,
    Rebase.Data.Time.Format.ISO8601 as Data.Time.Format.ISO8601,
    Rebase.Data.Time.LocalTime as Data.Time.LocalTime,
    Rebase.Data.Traversable as Data.Traversable,
    Rebase.Data.Traversable.Instances as Data.Traversable.Instances,
    Rebase.Data.Tree as Data.Tree,
    Rebase.Data.Tuple as Data.Tuple,
    Rebase.Data.Type.Bool as Data.Type.Bool,
    Rebase.Data.Type.Coercion as Data.Type.Coercion,
    Rebase.Data.Type.Equality as Data.Type.Equality,
    Rebase.Data.Typeable as Data.Typeable,
    Rebase.Data.Unique as Data.Unique,
    Rebase.Data.UUID as Data.UUID,
    Rebase.Data.Vector as Data.Vector,
    Rebase.Data.Vector.Fusion.Stream.Monadic as Data.Vector.Fusion.Stream.Monadic,
    Rebase.Data.Vector.Fusion.Util as Data.Vector.Fusion.Util,
    Rebase.Data.Vector.Generic as Data.Vector.Generic,
    Rebase.Data.Vector.Generic.Base as Data.Vector.Generic.Base,
    Rebase.Data.Vector.Generic.Mutable as Data.Vector.Generic.Mutable,
    Rebase.Data.Vector.Generic.New as Data.Vector.Generic.New,
    Rebase.Data.Vector.Instances as Data.Vector.Instances,
    Rebase.Data.Vector.Internal.Check as Data.Vector.Internal.Check,
    Rebase.Data.Vector.Mutable as Data.Vector.Mutable,
    Rebase.Data.Vector.Primitive as Data.Vector.Primitive,
    Rebase.Data.Vector.Primitive.Mutable as Data.Vector.Primitive.Mutable,
    Rebase.Data.Vector.Storable as Data.Vector.Storable,
    Rebase.Data.Vector.Storable.Internal as Data.Vector.Storable.Internal,
    Rebase.Data.Vector.Storable.Mutable as Data.Vector.Storable.Mutable,
    Rebase.Data.Vector.Unboxed as Data.Vector.Unboxed,
    Rebase.Data.Vector.Unboxed.Base as Data.Vector.Unboxed.Base,
    Rebase.Data.Vector.Unboxed.Mutable as Data.Vector.Unboxed.Mutable,
    Rebase.Data.Version as Data.Version,
    Rebase.Data.Void as Data.Void,
    Rebase.Data.Void.Unsafe as Data.Void.Unsafe,
    Rebase.Data.Word as Data.Word,
    Rebase.Debug.Trace as Debug.Trace,
    Rebase.Foreign as Foreign,
    Rebase.Foreign.C as Foreign.C,
    Rebase.Foreign.C.Error as Foreign.C.Error,
    Rebase.Foreign.C.String as Foreign.C.String,
    Rebase.Foreign.C.Types as Foreign.C.Types,
    Rebase.Foreign.Concurrent as Foreign.Concurrent,
    Rebase.Foreign.ForeignPtr as Foreign.ForeignPtr,
    Rebase.Foreign.ForeignPtr.Unsafe as Foreign.ForeignPtr.Unsafe,
    Rebase.Foreign.Marshal as Foreign.Marshal,
    Rebase.Foreign.Marshal.Alloc as Foreign.Marshal.Alloc,
    Rebase.Foreign.Marshal.Array as Foreign.Marshal.Array,
    Rebase.Foreign.Marshal.Error as Foreign.Marshal.Error,
    Rebase.Foreign.Marshal.Pool as Foreign.Marshal.Pool,
    Rebase.Foreign.Marshal.Safe as Foreign.Marshal.Safe,
    Rebase.Foreign.Marshal.Unsafe as Foreign.Marshal.Unsafe,
    Rebase.Foreign.Marshal.Utils as Foreign.Marshal.Utils,
    Rebase.Foreign.Ptr as Foreign.Ptr,
    Rebase.Foreign.StablePtr as Foreign.StablePtr,
    Rebase.Foreign.Storable as Foreign.Storable,
    Rebase.GHC.Arr as GHC.Arr,
    Rebase.GHC.Base as GHC.Base,
    Rebase.GHC.Char as GHC.Char,
    Rebase.GHC.Conc as GHC.Conc,
    Rebase.GHC.Conc.IO as GHC.Conc.IO,
    Rebase.GHC.Conc.Signal as GHC.Conc.Signal,
    Rebase.GHC.Conc.Sync as GHC.Conc.Sync,
    Rebase.GHC.Enum as GHC.Enum,
    Rebase.GHC.Environment as GHC.Environment,
    Rebase.GHC.Err as GHC.Err,
    Rebase.GHC.Exception as GHC.Exception,
    Rebase.GHC.Exts as GHC.Exts,
    Rebase.GHC.Fingerprint as GHC.Fingerprint,
    Rebase.GHC.Fingerprint.Type as GHC.Fingerprint.Type,
    Rebase.GHC.Float as GHC.Float,
    Rebase.GHC.Float.ConversionUtils as GHC.Float.ConversionUtils,
    Rebase.GHC.Float.RealFracMethods as GHC.Float.RealFracMethods,
    Rebase.GHC.Foreign as GHC.Foreign,
    Rebase.GHC.ForeignPtr as GHC.ForeignPtr,
    Rebase.GHC.Generics as GHC.Generics,
    Rebase.GHC.Int as GHC.Int,
    Rebase.GHC.IO as GHC.IO,
    Rebase.GHC.IO.Buffer as GHC.IO.Buffer,
    Rebase.GHC.IO.BufferedIO as GHC.IO.BufferedIO,
    Rebase.GHC.IO.Device as GHC.IO.Device,
    Rebase.GHC.IO.Encoding as GHC.IO.Encoding,
    Rebase.GHC.IO.Encoding.Failure as GHC.IO.Encoding.Failure,
    Rebase.GHC.IO.Encoding.Iconv as GHC.IO.Encoding.Iconv,
    Rebase.GHC.IO.Encoding.Latin1 as GHC.IO.Encoding.Latin1,
    Rebase.GHC.IO.Encoding.Types as GHC.IO.Encoding.Types,
    Rebase.GHC.IO.Encoding.UTF16 as GHC.IO.Encoding.UTF16,
    Rebase.GHC.IO.Encoding.UTF32 as GHC.IO.Encoding.UTF32,
    Rebase.GHC.IO.Encoding.UTF8 as GHC.IO.Encoding.UTF8,
    Rebase.GHC.IO.Exception as GHC.IO.Exception,
    Rebase.GHC.IO.FD as GHC.IO.FD,
    Rebase.GHC.IO.Handle as GHC.IO.Handle,
    Rebase.GHC.IO.Handle.FD as GHC.IO.Handle.FD,
    Rebase.GHC.IO.Handle.Internals as GHC.IO.Handle.Internals,
    Rebase.GHC.IO.Handle.Text as GHC.IO.Handle.Text,
    Rebase.GHC.IO.Handle.Types as GHC.IO.Handle.Types,
    Rebase.GHC.IO.IOMode as GHC.IO.IOMode,
    Rebase.GHC.IOArray as GHC.IOArray,
    Rebase.GHC.IORef as GHC.IORef,
    Rebase.GHC.List as GHC.List,
    Rebase.GHC.MVar as GHC.MVar,
    Rebase.GHC.Num as GHC.Num,
    Rebase.GHC.OverloadedLabels as GHC.OverloadedLabels,
    Rebase.GHC.Profiling as GHC.Profiling,
    Rebase.GHC.Ptr as GHC.Ptr,
    Rebase.GHC.Read as GHC.Read,
    Rebase.GHC.Real as GHC.Real,
    Rebase.GHC.Records as GHC.Records,
    Rebase.GHC.Show as GHC.Show,
    Rebase.GHC.ST as GHC.ST,
    Rebase.GHC.Stable as GHC.Stable,
    Rebase.GHC.Stack as GHC.Stack,
    Rebase.GHC.Stats as GHC.Stats,
    Rebase.GHC.Storable as GHC.Storable,
    Rebase.GHC.STRef as GHC.STRef,
    Rebase.GHC.TopHandler as GHC.TopHandler,
    Rebase.GHC.TypeLits as GHC.TypeLits,
    Rebase.GHC.TypeNats as GHC.TypeNats,
    Rebase.GHC.Unicode as GHC.Unicode,
    Rebase.GHC.Weak as GHC.Weak,
    Rebase.GHC.Word as GHC.Word,
    Rebase.Numeric as Numeric,
    Rebase.Numeric.Natural as Numeric.Natural,
    Rebase.Prelude as Prelude,
    Rebase.System.Console.GetOpt as System.Console.GetOpt,
    Rebase.System.CPUTime as System.CPUTime,
    Rebase.System.Environment as System.Environment,
    Rebase.System.Exit as System.Exit,
    Rebase.System.Info as System.Info,
    Rebase.System.IO as System.IO,
    Rebase.System.IO.Error as System.IO.Error,
    Rebase.System.IO.Unsafe as System.IO.Unsafe,
    Rebase.System.Mem as System.Mem,
    Rebase.System.Mem.StableName as System.Mem.StableName,
    Rebase.System.Mem.Weak as System.Mem.Weak,
    Rebase.System.Posix.Internals as System.Posix.Internals,
    Rebase.System.Posix.Types as System.Posix.Types,
    Rebase.System.Timeout as System.Timeout,
    Rebase.Text.ParserCombinators.ReadP as Text.ParserCombinators.ReadP,
    Rebase.Text.ParserCombinators.ReadPrec as Text.ParserCombinators.ReadPrec,
    Rebase.Text.Printf as Text.Printf,
    Rebase.Text.Read as Text.Read,
    Rebase.Text.Read.Lex as Text.Read.Lex,
    Rebase.Text.Show as Text.Show,
    Rebase.Unsafe.Coerce as Unsafe.Coerce,

  exposed:          False
  build-depends:    rebase ==1.22
